// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RGBGradient renders 1`] = `
<body>
  <div>
    <div
      style="opacity: 0;"
    />
    <div
      style="opacity: 0;"
    />
  </div>
</body>
`;

exports[`RGBGradient renders with opacity 1`] = `
<body>
  <div>
    <noscript />
  </div>
</body>
`;
